# rust-bevy-game

rust/: .gitignore  Cargo.toml
rust/bevy_egui/: Cargo.toml
rust/game_plugin/: Cargo.toml
rust/game_plugin/src/: actions.rs  lib.rs
rust/src/: lib.rs
src/: index.js
