[package]
name = "bevy_game"
version = "0.1.0"
publish = false
authors = [
    "Ricardo W Bento <roicoroy@yahoo.com.br>",
]
edition = "2018"
categories = ["wasm"]
build = "src/lib.rs"

[profile.dev]
opt-level = 1

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "game_plugin/default"
]

native = [
    "bevy/bevy_wgpu",
    "game_plugin/native"
]

web = [
    "bevy_webgl2",
]

dev = [
    "bevy/dynamic",
    "native",
]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
bevy = { version = "0.5.0", default-features = false }
bevy_webgl2 = {version = "0.5.0", optional = true}
egui = "0.12.0"
game_plugin = {path = "game_plugin"}
winit = "0.24.0"
webbrowser = { version = "0.5.5", optional = true }
bevy_egui = { path = "bevy_egui" }
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.69"

[build-dependencies]
embed-resource = "1.4"
