[package]
name = "game_plugin"
version = "0.1.0"
publish = false
authors = ["Ricardo W Bento <roicoroy@yahoo.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [
    "bevy/bevy_gltf",
    "bevy/bevy_winit",
    "bevy/render",
    "bevy/png",
    "bevy_kira_audio/ogg"
]

native = [
    "bevy/bevy_wgpu",
]

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
bevy = { version = "0.5.0", default-features = false }
bevy_kira_audio = { version = "0.4.0" }
rand = "0.8.3"
wee_alloc = { version = "0.4.5", optional = true }
wasm-bindgen = "0.2.69"